monitoring/grafana/manifests/grafana/templates/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: RELEASE-NAME-ingress
  namespace: NAMESPACE
spec:
  tls:
  - hosts:
      - 'exchangeweb.net'
      - '*.exchangeweb.net'
    secretName: RELEASE-NAME-tls
  rules:
    - host: grafana-dev.exchangeweb.net
      http:
        paths:
        - backend:
            serviceName: k8s-cluster-grafana
            servicePort: 80
          path: /
